move Streamable -> Stream